--- a/css/blog.css
+++ b/css/blog.css
@@ -328,6 +328,11 @@ footer {
         width: 100%;
         padding-top: 20%;
     }
+    .logo-footer {
+        margin-top: 5px;
+        margin-bottom: 20px;
+        max-width: 35%;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
