--- a/css/index.css
+++ b/css/index.css
@@ -774,7 +774,7 @@ footer {
         text-align: center;
     }
     .more-content {
-        margin-left: 72px;
+        margin-left: 2%;
     }
     .aditional-info .centralize-container h3 {
         text-transform: uppercase;
